--- a/css/main.css
+++ b/css/main.css
@@ -107,7 +107,7 @@ body {
   .box-sign .btn-login {
     width: 100%; }
   .box-sign label {
-    margin-left: 2s1px; }
+    margin-left: 20px; }
   .box-sign input {
     display: block;
     width: 300px;
