--- a/sass/signup.scss
+++ b/sass/signup.scss
@@ -35,7 +35,7 @@ img {
       width: 100%;
     }
     label {
-      margin-left: 2s1px;
+      margin-left: 20px;
       // padding: 15px;
     }
     input {
