--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-/* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 body {
   padding: 0;
   margin: 0; }
@@ -120,5 +119,84 @@ body {
         width: 100%; } }
     .box-sign input:focus, .box-sign input:active {
       outline: none; }
+
+.btn-trans {
+  background-color: transparent;
+  border: 0; }
+
+.navbar-acaq {
+  background-color: #1ABC9C;
+  min-height: 80px; }
+  .navbar-acaq .navbar-form {
+    margin-left: 50%; }
+  .navbar-acaq .navbar-brand .navbar-logo {
+    width: 100px;
+    height: 50px; }
+  .navbar-acaq .navbar-right .dropdown .user-icon {
+    display: inline-block;
+    border-radius: 100%;
+    width: 50px;
+    height: 50px; }
+
+.box-post {
+  display: block;
+  margin: 0 auto;
+  width: 600px;
+  height: 200px;
+  border-radius: 10px;
+  background-color: #fff; }
+
+.box-title {
+  width: 95%;
+  border-bottom: 2px solid #1ABC9C;
+  margin: 0 15px 20px 15px; }
+
+.input-title {
+  width: 100%;
+  height: 50px;
+  outline: none;
+  border: 0;
+  box-shadow: 0;
+  color: #1ABC9C;
+  font-weight: bold;
+  font-size: 18px;
+  padding-left: 20px; }
+
+.input-desc {
+  width: 100%;
+  height: 6em;
+  outline: none;
+  border: 0;
+  box-shadow: 0;
+  padding-left: 20px;
+  margin-bottom: 10px; }
+
+.box-footer {
+  height: 40px;
+  width: 100%;
+  background: #ccc;
+  padding: 0 15px; }
+
+.btn-post {
+  border-radius: 100%;
+  border: 0;
+  margin-left: 10px; }
+
+.btn-min {
+  width: 20px;
+  height: 20px;
+  margin-top: 10px; }
+
+.btn-max {
+  width: 50px;
+  height: 50px;
+  margin-top: -5px; }
+
+.img-box {
+  width: 100%;
+  margin: 0; }
+
+body {
+  background-color: #f1f1f2; }
 
 /*# sourceMappingURL=main.css.map */
